--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="gallery">
         <div class="galleryItem">
             <h1 class="galleryTitle">Be Yourself!</h1>
-            <img src="https://images.pexels.com/photos/9295809/pexels-photo-9295809.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/sneakers4.png"
                 alt="" class="galleryImg">
         </div>
         <div class="galleryItem">
@@ -163,13 +163,13 @@
         </div>
         <div class="galleryItem">
             <h1 class="galleryTitle">Just Do it!</h1>
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/sneakers2.png"
                 alt="" class="galleryImg">
         </div>
     </div>
     <div class="newSeason">
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/4753986/pexels-photo-4753986.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/sneakers3.png"
                 alt="" class="nsImg">
         </div>
         <div class="nsItem">
@@ -181,7 +181,7 @@
             </a>
         </div>
         <div class="nsItem">
-            <img src="https://images.pexels.com/photos/7856965/pexels-photo-7856965.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+            <img src="img/sneakers5.png"
                 alt="" class="nsImg">
         </div>
     </div>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             <div class="footerRightMenu">
-                <span class="copyright"> All rights reserved</span>
+                <span class="copyright"> All rights reserved.</span>
             </div>
         </div>
     </footer>
